# lambda-repl

./: .gitignore  README.md  computation.cabal  lambda-calculus.cabal  lambda-repl.cabal  stack.yaml
src/: Main.hs  lambda-calculus.hs  turing-machines.hs
src/LambdaCalculus/: Conversions.hs  ExampleTerms.hs  Parser.hs  Terms.hs
