name:                lambda-repl
version:             0.1.0.0
synopsis:            Bare-bones REPL for the untyped lambda calculus
description:         Please see README.md
homepage:            https://github.com/githubuser/computation#readme
license:             PublicDomain
license-file:        LICENSE
author:              Leon Di Stefano
maintainer:          l@sdf.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable lambda-repl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, attoparsec, turtle, text
